# SentimentAnalysis

./: CMakeLists.txt  instructions.txt  outline.txt  project_structure
include/: DSString.h  SentimentClassifier.h
src/: DSString.cpp  SentimentClassifier.cpp  main.cpp
tests/: DSStringTest.cpp
